# Model-Context-Protocol

./: FastAPI_server.py  README.md  app.py  browser_mcp.json  pyproject.toml  requirements.txt  server.py
